<resources>
    <string name="app_name">BluetoothApp</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="open_scan_interface">Find BLE Devices</string>
    <string name="begin_ble_scan">Start Scan</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="Edit_Snr_nme_button">Edit name</string>
    <string name="Edit_Snr_rm_button">Edit room number</string>
    <string name="Save_BLE_Device">Save</string>
    <string name="Cancel_Edit_Info">Cancel, do not save</string>
    <string name="Manufacturing_Name">Manufacturing Name</string>
    <string name="MAC_Address">MAC Address</string>
    <string name="Signal_Strength">Signal Strength</string>
    <string name="Edit_Snr_nme_button_save">Done</string>
    <string name="Default_resident_name">Resident Name</string>
    <string name="Default_resident_rm_nmber">Room number</string>
    <string name="Dialog_text">Updated information has been saved</string>
    <string name="Confirm_save">OK</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
